@@ -1,10 +1,9 @@
 package io.kestra.core.repositories;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.google.common.collect.ImmutableList;
 import io.kestra.core.Helpers;
 import io.kestra.core.events.CrudEvent;
 import io.kestra.core.events.CrudEventType;
+import io.kestra.core.models.QueryFilter;
 import io.kestra.core.models.SearchResult;
 import io.kestra.core.models.executions.Execution;
 import io.kestra.core.models.flows.*;
@@ -12,12 +11,9 @@ import io.kestra.core.models.flows.input.StringInput;
 import io.kestra.core.models.property.Property;
 import io.kestra.core.queues.QueueException;
 import io.kestra.core.schedulers.AbstractSchedulerTest;
-import io.kestra.core.serializers.JacksonMapper;
 import io.kestra.core.services.FlowService;
-import io.kestra.core.services.PluginDefaultService;
 import io.kestra.plugin.core.debug.Return;
 import io.kestra.plugin.core.flow.Template;
-import io.kestra.plugin.core.log.Log;
 import io.kestra.core.utils.Await;
 import io.kestra.core.utils.IdUtils;
 import io.kestra.core.utils.TestsUtils;
@@ -40,8 +36,7 @@ import java.util.*;
 import java.util.concurrent.TimeoutException;
 import jakarta.validation.ConstraintViolationException;
 
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.*;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.spy;
@@ -50,6 +45,9 @@ import static org.mockito.Mockito.spy;
 @KestraTest
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
 public abstract class AbstractFlowRepositoryTest {
+    public static final String TEST_TENANT_ID = "tenant";
+    public static final String TEST_NAMESPACE = "io.kestra.unittest";
+    public static final String TEST_FLOW_ID = "test";
     @Inject
     protected FlowRepositoryInterface flowRepository;
 
@@ -59,39 +57,36 @@ public abstract class AbstractFlowRepositoryTest {
     @Inject
     private LocalFlowRepositoryLoader repositoryLoader;
 
-    @Inject
-    protected PluginDefaultService pluginDefaultService;
-
     @BeforeEach
     protected void init() throws IOException, URISyntaxException {
         TestsUtils.loads(repositoryLoader);
         FlowListener.reset();
     }
 
-    private static Flow.FlowBuilder<?, ?> builder() {
-        return builder(IdUtils.create(), "test");
+    private static FlowWithSource.FlowWithSourceBuilder<?, ?> builder() {
+        return builder(IdUtils.create(), TEST_FLOW_ID);
     }
 
-    private static Flow.FlowBuilder<?, ?> builder(String flowId, String taskId) {
-        return Flow.builder()
+    private static FlowWithSource.FlowWithSourceBuilder<?, ?> builder(String flowId, String taskId) {
+        return FlowWithSource.builder()
             .id(flowId)
-            .namespace("io.kestra.unittest")
-            .tasks(Collections.singletonList(Return.builder().id(taskId).type(Return.class.getName()).format(Property.of("test")).build()));
+            .namespace(TEST_NAMESPACE)
+            .tasks(Collections.singletonList(Return.builder().id(taskId).type(Return.class.getName()).format(Property.of(TEST_FLOW_ID)).build()));
     }
 
     @Test
     void findById() {
-        Flow flow = builder()
+        FlowWithSource flow = builder()
             .revision(3)
             .build();
-        flow = flowRepository.create(flow, flow.generateSource(), pluginDefaultService.injectDefaults(flow.withSource(flow.generateSource())));
+        flow = flowRepository.create(GenericFlow.of(flow));
         try {
             Optional<Flow> full = flowRepository.findById(null, flow.getNamespace(), flow.getId());
-            assertThat(full.isPresent(), is(true));
-            assertThat(full.get().getRevision(), is(1));
+            assertThat(full.isPresent()).isEqualTo(true);
+            assertThat(full.get().getRevision()).isEqualTo(1);
 
             full = flowRepository.findById(null, flow.getNamespace(), flow.getId(), Optional.empty());
-            assertThat(full.isPresent(), is(true));
+            assertThat(full.isPresent()).isEqualTo(true);
         } finally {
             deleteFlow(flow);
         }
@@ -99,17 +94,17 @@ public abstract class AbstractFlowRepositoryTest {
 
     @Test
     void findByIdWithoutAcl() {
-        Flow flow = builder()
+        FlowWithSource flow = builder()
             .revision(3)
             .build();
-        flow = flowRepository.create(flow, flow.generateSource(), pluginDefaultService.injectDefaults(flow.withSource(flow.generateSource())));
+        flow = flowRepository.create(GenericFlow.of(flow));
         try {
             Optional<Flow> full = flowRepository.findByIdWithoutAcl(null, flow.getNamespace(), flow.getId(), Optional.empty());
-            assertThat(full.isPresent(), is(true));
-            assertThat(full.get().getRevision(), is(1));
+            assertThat(full.isPresent()).isEqualTo(true);
+            assertThat(full.get().getRevision()).isEqualTo(1);
 
             full = flowRepository.findByIdWithoutAcl(null, flow.getNamespace(), flow.getId(), Optional.empty());
-            assertThat(full.isPresent(), is(true));
+            assertThat(full.isPresent()).isEqualTo(true);
         } finally {
             deleteFlow(flow);
         }
@@ -117,19 +112,20 @@ public abstract class AbstractFlowRepositoryTest {
 
     @Test
     void findByIdWithSource() {
-        Flow flow = builder()
+        FlowWithSource flow = builder()
             .revision(3)
             .build();
-        flow = flowRepository.create(flow, "# comment\n" + flow.generateSource(), pluginDefaultService.injectDefaults(flow.withSource(flow.generateSource())));
+        String source = "# comment\n" + flow.sourceOrGenerateIfNull();
+        flow = flowRepository.create(GenericFlow.fromYaml(null, source));
 
         try {
             Optional<FlowWithSource> full = flowRepository.findByIdWithSource(null, flow.getNamespace(), flow.getId());
-            assertThat(full.isPresent(), is(true));
+            assertThat(full.isPresent()).isEqualTo(true);
 
             full.ifPresent(current -> {
-                assertThat(full.get().getRevision(), is(1));
-                assertThat(full.get().getSource(), containsString("# comment"));
-                assertThat(full.get().getSource(), not(containsString("revision:")));
+                assertThat(full.get().getRevision()).isEqualTo(1);
+                assertThat(full.get().getSource()).contains("# comment");
+                assertThat(full.get().getSource()).doesNotContain("revision:");
             });
         } finally {
             deleteFlow(flow);
@@ -137,98 +133,12 @@ public abstract class AbstractFlowRepositoryTest {
     }
 
     @Test
-    protected void revision() throws JsonProcessingException {
-        String flowId = IdUtils.create();
-        // create with builder
-        Flow first = Flow.builder()
-            .id(flowId)
-            .namespace("io.kestra.unittest")
-            .tasks(Collections.singletonList(Return.builder().id("test").type(Return.class.getName()).format(Property.of("test")).build()))
-            .inputs(ImmutableList.of(StringInput.builder().type(Type.STRING).id("a").build()))
-            .build();
-        // create with repository
-        FlowWithSource flow = flowRepository.create(first, first.generateSource(), pluginDefaultService.injectDefaults(first.withSource(first.generateSource())));
-
-        List<FlowWithSource> revisions;
-        try {
-            // submit new one, no change
-            Flow notSaved = flowRepository.update(flow, flow, first.generateSource(), pluginDefaultService.injectDefaults(flow));
-            assertThat(notSaved.getRevision(), is(flow.getRevision()));
-
-            // submit new one with change
-            Flow flowRev2 = Flow.builder()
-                .id(flowId)
-                .namespace("io.kestra.unittest")
-                .tasks(Collections.singletonList(
-                    Log.builder()
-                        .id(IdUtils.create())
-                        .type(Log.class.getName())
-                        .message("Hello World")
-                        .build()
-                ))
-                .inputs(ImmutableList.of(StringInput.builder().type(Type.STRING).id("b").build()))
-                .build();
-
-            // revision is incremented
-            FlowWithSource incremented = flowRepository.update(flowRev2, flow, flowRev2.generateSource(), pluginDefaultService.injectDefaults(flowRev2.withSource(flowRev2.generateSource())));
-            assertThat(incremented.getRevision(), is(2));
-
-            // revision is well saved
-            revisions = flowRepository.findRevisions(null, flow.getNamespace(), flow.getId());
-            assertThat(revisions.size(), is(2));
-
-            // submit the same one serialized, no changed
-            FlowWithSource incremented2 = flowRepository.update(
-                JacksonMapper.ofJson().readValue(JacksonMapper.ofJson().writeValueAsString(flowRev2), Flow.class),
-                flowRev2,
-                JacksonMapper.ofJson().readValue(JacksonMapper.ofJson().writeValueAsString(flowRev2), Flow.class).generateSource(),
-                pluginDefaultService.injectDefaults(flowRev2.withSource(flowRev2.generateSource()))
-            );
-            assertThat(incremented2.getRevision(), is(2));
-
-            // resubmit first one, revision is incremented
-            FlowWithSource incremented3 = flowRepository.update(
-                JacksonMapper.ofJson().readValue(JacksonMapper.ofJson().writeValueAsString(flow.toFlow()), Flow.class),
-                flowRev2,
-                JacksonMapper.ofJson().readValue(JacksonMapper.ofJson().writeValueAsString(flow.toFlow()), Flow.class).generateSource(),
-                pluginDefaultService.injectDefaults(JacksonMapper.ofJson().readValue(JacksonMapper.ofJson().writeValueAsString(flow.toFlow()), Flow.class).withSource(flow.getSource()))
-            );
-            assertThat(incremented3.getRevision(), is(3));
-        } finally {
-            deleteFlow(flow);
-        }
-
-        // revisions is still findable after delete
-        revisions = flowRepository.findRevisions(null, flow.getNamespace(), flow.getId());
-        assertThat(revisions.size(), is(4));
-
-
-        Optional<Flow> findDeleted = flowRepository.findById(
-            null,
-            flow.getNamespace(),
-            flow.getId(),
-            Optional.of(flow.getRevision())
-        );
-        assertThat(findDeleted.isPresent(), is(true));
-        assertThat(findDeleted.get().getRevision(), is(flow.getRevision()));
-
-        // recreate the first one, we have a new revision
-        Flow incremented4 = flowRepository.create(flow, flow.generateSource(), pluginDefaultService.injectDefaults(flow));
-
-        try {
-            assertThat(incremented4.getRevision(), is(5));
-        } finally {
-            deleteFlow(incremented4);
-        }
-    }
-
-    @Test
     void save() {
-        Flow flow = builder().revision(12).build();
-        Flow save = flowRepository.create(flow, flow.generateSource(), pluginDefaultService.injectDefaults(flow.withSource(flow.generateSource())));
+        FlowWithSource flow = builder().revision(12).build();
+        FlowWithSource save = flowRepository.create(GenericFlow.of(flow));
 
         try {
-            assertThat(save.getRevision(), is(1));
+            assertThat(save.getRevision()).isEqualTo(1);
         } finally {
             deleteFlow(save);
         }
@@ -236,11 +146,11 @@ public abstract class AbstractFlowRepositoryTest {
 
     @Test
     void saveNoRevision() {
-        Flow flow = builder().build();
-        Flow save = flowRepository.create(flow, flow.generateSource(), pluginDefaultService.injectDefaults(flow.withSource(flow.generateSource())));
+        FlowWithSource flow = builder().build();
+        FlowWithSource save = flowRepository.create(GenericFlow.of(flow));
 
         try {
-            assertThat(save.getRevision(), is(1));
+            assertThat(save.getRevision()).isEqualTo(1);
         } finally {
             deleteFlow(save);
         }
@@ -251,52 +161,52 @@ public abstract class AbstractFlowRepositoryTest {
     void findAll() {
         List<Flow> save = flowRepository.findAll(null);
 
-        assertThat((long) save.size(), is(Helpers.FLOWS_COUNT));
+        assertThat((long) save.size()).isEqualTo(Helpers.FLOWS_COUNT);
     }
 
     @Test
     void findAllWithSource() {
         List<FlowWithSource> save = flowRepository.findAllWithSource(null);
 
-        assertThat((long) save.size(), is(Helpers.FLOWS_COUNT));
+        assertThat((long) save.size()).isEqualTo(Helpers.FLOWS_COUNT);
     }
 
     @Test
     void findAllForAllTenants() {
         List<Flow> save = flowRepository.findAllForAllTenants();
 
-        assertThat((long) save.size(), is(Helpers.FLOWS_COUNT));
+        assertThat((long) save.size()).isEqualTo(Helpers.FLOWS_COUNT);
     }
 
     @Test
     void findAllWithSourceForAllTenants() {
         List<FlowWithSource> save = flowRepository.findAllWithSourceForAllTenants();
 
-        assertThat((long) save.size(), is(Helpers.FLOWS_COUNT));
+        assertThat((long) save.size()).isEqualTo(Helpers.FLOWS_COUNT);
     }
 
     @Test
     void findByNamespace() {
         List<Flow> save = flowRepository.findByNamespace(null, "io.kestra.tests");
-        assertThat((long) save.size(), is(Helpers.FLOWS_COUNT - 20));
+        assertThat((long) save.size()).isEqualTo(Helpers.FLOWS_COUNT - 20);
 
         save = flowRepository.findByNamespace(null, "io.kestra.tests2");
-        assertThat((long) save.size(), is(1L));
+        assertThat((long) save.size()).isEqualTo(1L);
 
         save = flowRepository.findByNamespace(null, "io.kestra.tests.minimal.bis");
-        assertThat((long) save.size(), is(1L));
+        assertThat((long) save.size()).isEqualTo(1L);
     }
 
     @Test
     void findByNamespacePrefix() {
         List<Flow> save = flowRepository.findByNamespacePrefix(null, "io.kestra.tests");
-        assertThat((long) save.size(), is(Helpers.FLOWS_COUNT - 1));
+        assertThat((long) save.size()).isEqualTo(Helpers.FLOWS_COUNT - 1);
 
         save = flowRepository.findByNamespace(null, "io.kestra.tests2");
-        assertThat((long) save.size(), is(1L));
+        assertThat((long) save.size()).isEqualTo(1L);
 
         save = flowRepository.findByNamespace(null, "io.kestra.tests.minimal.bis");
-        assertThat((long) save.size(), is(1L));
+        assertThat((long) save.size()).isEqualTo(1L);
     }
 
     @Test
@@ -304,14 +214,14 @@ public abstract class AbstractFlowRepositoryTest {
         Flow flow = builder()
             .revision(3)
             .build();
-        String flowSource = "# comment\n" + flow.generateSource();
-        flow = flowRepository.create(flow, flowSource, pluginDefaultService.injectDefaults(flow.withSource(flowSource)));
+        String flowSource = "# comment\n" + flow.sourceOrGenerateIfNull();
+        flow = flowRepository.create(GenericFlow.fromYaml(null, flowSource));
 
         try {
             List<FlowWithSource> save = flowRepository.findByNamespaceWithSource(null, flow.getNamespace());
-            assertThat((long) save.size(), is(1L));
+            assertThat((long) save.size()).isEqualTo(1L);
 
-            assertThat(save.getFirst().getSource(), is(FlowService.cleanupSource(flowSource)));
+            assertThat(save.getFirst().getSource()).isEqualTo(FlowService.cleanupSource(flowSource));
         } finally {
             deleteFlow(flow);
         }
@@ -320,50 +230,50 @@ public abstract class AbstractFlowRepositoryTest {
     @Test
     protected void find() {
         List<Flow> save = flowRepository.find(Pageable.from(1, (int) Helpers.FLOWS_COUNT - 1, Sort.UNSORTED), null, null, null, null, null);
-        assertThat((long) save.size(), is(Helpers.FLOWS_COUNT - 1));
+        assertThat((long) save.size()).isEqualTo(Helpers.FLOWS_COUNT - 1);
 
         save = flowRepository.find(Pageable.from(1, (int) Helpers.FLOWS_COUNT + 1, Sort.UNSORTED), null, null, null, null, null);
-        assertThat((long) save.size(), is(Helpers.FLOWS_COUNT));
+        assertThat((long) save.size()).isEqualTo(Helpers.FLOWS_COUNT);
 
         save = flowRepository.find(Pageable.from(1), null, null, null, "io.kestra.tests.minimal.bis", Collections.emptyMap());
-        assertThat((long) save.size(), is(1L));
+        assertThat((long) save.size()).isEqualTo(1L);
 
         save = flowRepository.find(Pageable.from(1, 100, Sort.UNSORTED), null, null, null, null, Map.of("country", "FR"));
-        assertThat(save.size(), is(1));
+        assertThat(save.size()).isEqualTo(1);
 
         save = flowRepository.find(Pageable.from(1), null, null, null, "io.kestra.tests", Map.of("key2", "value2"));
-        assertThat((long) save.size(), is(1L));
+        assertThat((long) save.size()).isEqualTo(1L);
 
         save = flowRepository.find(Pageable.from(1), null, null, null, "io.kestra.tests", Map.of("key1", "value2"));
-        assertThat((long) save.size(), is(0L));
+        assertThat((long) save.size()).isEqualTo(0L);
     }
 
     @Test
     protected void findSpecialChars() {
         ArrayListTotal<SearchResult<Flow>> save = flowRepository.findSourceCode(Pageable.unpaged(), "https://api.chucknorris.io", null, null);
-        assertThat((long) save.size(), is(2L));
+        assertThat((long) save.size()).isEqualTo(2L);
     }
 
     @Test
     void findWithSource() {
         List<FlowWithSource> save = flowRepository.findWithSource(null, null, null, "io.kestra.tests", Collections.emptyMap());
-        assertThat((long) save.size(), is(Helpers.FLOWS_COUNT - 1));
+        assertThat((long) save.size()).isEqualTo(Helpers.FLOWS_COUNT - 1);
 
         save = flowRepository.findWithSource(null, null, null, "io.kestra.tests2", Collections.emptyMap());
-        assertThat((long) save.size(), is(1L));
+        assertThat((long) save.size()).isEqualTo(1L);
 
         save = flowRepository.findWithSource(null, null, null, "io.kestra.tests.minimal.bis", Collections.emptyMap());
-        assertThat((long) save.size(), is(1L));
+        assertThat((long) save.size()).isEqualTo(1L);
     }
 
     @Test
     void delete() {
         Flow flow = builder().build();
 
-        FlowWithSource save = flowRepository.create(flow, flow.generateSource(), pluginDefaultService.injectDefaults(flow.withSource(flow.generateSource())));
+        FlowWithSource save = flowRepository.create(GenericFlow.of(flow));
 
         try {
-            assertThat(flowRepository.findById(null, save.getNamespace(), save.getId()).isPresent(), is(true));
+            assertThat(flowRepository.findById(null, save.getNamespace(), save.getId()).isPresent()).isEqualTo(true);
         } catch (Throwable e) {
             deleteFlow(save);
             throw e;
@@ -371,11 +281,11 @@ public abstract class AbstractFlowRepositoryTest {
 
         Flow delete = flowRepository.delete(save);
 
-        assertThat(flowRepository.findById(null, flow.getNamespace(), flow.getId()).isPresent(), is(false));
-        assertThat(flowRepository.findById(null, flow.getNamespace(), flow.getId(), Optional.of(save.getRevision())).isPresent(), is(true));
+        assertThat(flowRepository.findById(null, flow.getNamespace(), flow.getId()).isPresent()).isEqualTo(false);
+        assertThat(flowRepository.findById(null, flow.getNamespace(), flow.getId(), Optional.of(save.getRevision())).isPresent()).isEqualTo(true);
 
         List<FlowWithSource> revisions = flowRepository.findRevisions(null, flow.getNamespace(), flow.getId());
-        assertThat(revisions.getLast().getRevision(), is(delete.getRevision()));
+        assertThat(revisions.getLast().getRevision()).isEqualTo(delete.getRevision());
     }
 
     @Test
@@ -384,30 +294,30 @@ public abstract class AbstractFlowRepositoryTest {
 
         Flow flow = Flow.builder()
             .id(flowId)
-            .namespace("io.kestra.unittest")
-            .inputs(ImmutableList.of(StringInput.builder().type(Type.STRING).id("a").build()))
-            .tasks(Collections.singletonList(Return.builder().id("test").type(Return.class.getName()).format(Property.of("test")).build()))
+            .namespace(TEST_NAMESPACE)
+            .inputs(List.of(StringInput.builder().type(Type.STRING).id("a").build()))
+            .tasks(Collections.singletonList(Return.builder().id(TEST_FLOW_ID).type(Return.class.getName()).format(Property.of(TEST_FLOW_ID)).build()))
             .build();
 
-        Flow save = flowRepository.create(flow, flow.generateSource(), pluginDefaultService.injectDefaults(flow.withSource(flow.generateSource())));
+        Flow save = flowRepository.create(GenericFlow.of(flow));
 
         try {
-            assertThat(flowRepository.findById(null, flow.getNamespace(), flow.getId()).isPresent(), is(true));
+            assertThat(flowRepository.findById(null, flow.getNamespace(), flow.getId()).isPresent()).isEqualTo(true);
 
             Flow update = Flow.builder()
                 .id(IdUtils.create())
                 .namespace("io.kestra.unittest2")
-                .inputs(ImmutableList.of(StringInput.builder().type(Type.STRING).id("b").build()))
-                .tasks(Collections.singletonList(Return.builder().id("test").type(Return.class.getName()).format(Property.of("test")).build()))
+                .inputs(List.of(StringInput.builder().type(Type.STRING).id("b").build()))
+                .tasks(Collections.singletonList(Return.builder().id(TEST_FLOW_ID).type(Return.class.getName()).format(Property.of(TEST_FLOW_ID)).build()))
                 .build();
             ;
 
             ConstraintViolationException e = assertThrows(
                 ConstraintViolationException.class,
-                () -> flowRepository.update(update, flow, update.generateSource(), pluginDefaultService.injectDefaults(update.withSource(update.generateSource())))
+                () -> flowRepository.update(GenericFlow.of(update), flow)
             );
 
-            assertThat(e.getConstraintViolations().size(), is(2));
+            assertThat(e.getConstraintViolations().size()).isEqualTo(2);
         } finally {
             deleteFlow(save);
         }
@@ -419,35 +329,35 @@ public abstract class AbstractFlowRepositoryTest {
 
         Flow flow = Flow.builder()
             .id(flowId)
-            .namespace("io.kestra.unittest")
+            .namespace(TEST_NAMESPACE)
             .triggers(Collections.singletonList(AbstractSchedulerTest.UnitTest.builder()
                 .id("sleep")
                 .type(AbstractSchedulerTest.UnitTest.class.getName())
                 .build()))
-            .tasks(Collections.singletonList(Return.builder().id("test").type(Return.class.getName()).format(Property.of("test")).build()))
+            .tasks(Collections.singletonList(Return.builder().id(TEST_FLOW_ID).type(Return.class.getName()).format(Property.of(TEST_FLOW_ID)).build()))
             .build();
 
-        flow = flowRepository.create(flow, flow.generateSource(), pluginDefaultService.injectDefaults(flow.withSource(flow.generateSource())));
+        flow = flowRepository.create(GenericFlow.of(flow));
         try {
-            assertThat(flowRepository.findById(null, flow.getNamespace(), flow.getId()).isPresent(), is(true));
+            assertThat(flowRepository.findById(null, flow.getNamespace(), flow.getId()).isPresent()).isEqualTo(true);
 
             Flow update = Flow.builder()
                 .id(flowId)
-                .namespace("io.kestra.unittest")
-                .tasks(Collections.singletonList(Return.builder().id("test").type(Return.class.getName()).format(Property.of("test")).build()))
+                .namespace(TEST_NAMESPACE)
+                .tasks(Collections.singletonList(Return.builder().id(TEST_FLOW_ID).type(Return.class.getName()).format(Property.of(TEST_FLOW_ID)).build()))
                 .build();
             ;
 
-            Flow updated = flowRepository.update(update, flow, update.generateSource(), pluginDefaultService.injectDefaults(update.withSource(update.generateSource())));
-            assertThat(updated.getTriggers(), is(nullValue()));
+            Flow updated = flowRepository.update(GenericFlow.of(update), flow);
+            assertThat(updated.getTriggers()).isNull();
         } finally {
             deleteFlow(flow);
         }
 
         Await.until(() -> FlowListener.getEmits().size() == 3, Duration.ofMillis(100), Duration.ofSeconds(5));
-        assertThat(FlowListener.getEmits().stream().filter(r -> r.getType() == CrudEventType.CREATE).count(), is(1L));
-        assertThat(FlowListener.getEmits().stream().filter(r -> r.getType() == CrudEventType.UPDATE).count(), is(1L));
-        assertThat(FlowListener.getEmits().stream().filter(r -> r.getType() == CrudEventType.DELETE).count(), is(1L));
+        assertThat(FlowListener.getEmits().stream().filter(r -> r.getType() == CrudEventType.CREATE).count()).isEqualTo(1L);
+        assertThat(FlowListener.getEmits().stream().filter(r -> r.getType() == CrudEventType.UPDATE).count()).isEqualTo(1L);
+        assertThat(FlowListener.getEmits().stream().filter(r -> r.getType() == CrudEventType.DELETE).count()).isEqualTo(1L);
     }
 
 
@@ -457,30 +367,30 @@ public abstract class AbstractFlowRepositoryTest {
 
         Flow flow = Flow.builder()
             .id(flowId)
-            .namespace("io.kestra.unittest")
+            .namespace(TEST_NAMESPACE)
             .triggers(Collections.singletonList(AbstractSchedulerTest.UnitTest.builder()
                 .id("sleep")
                 .type(AbstractSchedulerTest.UnitTest.class.getName())
                 .build()))
-            .tasks(Collections.singletonList(Return.builder().id("test").type(Return.class.getName()).format(Property.of("test")).build()))
+            .tasks(Collections.singletonList(Return.builder().id(TEST_FLOW_ID).type(Return.class.getName()).format(Property.of(TEST_FLOW_ID)).build()))
             .build();
 
-        Flow save = flowRepository.create(flow, flow.generateSource(), pluginDefaultService.injectDefaults(flow.withSource(flow.generateSource())));
+        Flow save = flowRepository.create(GenericFlow.of(flow));
         try {
-            assertThat(flowRepository.findById(null, flow.getNamespace(), flow.getId()).isPresent(), is(true));
+            assertThat(flowRepository.findById(null, flow.getNamespace(), flow.getId()).isPresent()).isEqualTo(true);
         } finally {
             deleteFlow(save);
         }
 
         Await.until(() -> FlowListener.getEmits().size() == 2, Duration.ofMillis(100), Duration.ofSeconds(5));
-        assertThat(FlowListener.getEmits().stream().filter(r -> r.getType() == CrudEventType.CREATE).count(), is(1L));
-        assertThat(FlowListener.getEmits().stream().filter(r -> r.getType() == CrudEventType.DELETE).count(), is(1L));
+        assertThat(FlowListener.getEmits().stream().filter(r -> r.getType() == CrudEventType.CREATE).count()).isEqualTo(1L);
+        assertThat(FlowListener.getEmits().stream().filter(r -> r.getType() == CrudEventType.DELETE).count()).isEqualTo(1L);
     }
 
     @Test
     void findDistinctNamespace() {
         List<String> distinctNamespace = flowRepository.findDistinctNamespace(null);
-        assertThat((long) distinctNamespace.size(), is(7L));
+        assertThat((long) distinctNamespace.size()).isEqualTo(7L);
     }
 
     @SuppressWarnings("deprecation")
@@ -489,7 +399,7 @@ public abstract class AbstractFlowRepositoryTest {
         Template template = Template.builder()
             .id(IdUtils.create())
             .type(Template.class.getName())
-            .namespace("test")
+            .namespace(TEST_FLOW_ID)
             .templateId("testTemplate")
             .build();
 
@@ -501,66 +411,191 @@ public abstract class AbstractFlowRepositoryTest {
 
         Flow flow = Flow.builder()
             .id(IdUtils.create())
-            .namespace("io.kestra.unittest")
+            .namespace(TEST_NAMESPACE)
             .tasks(Collections.singletonList(templateSpy))
             .build();
 
-        flow = flowRepository.create(
-            flow,
-            flow.generateSource(),
-            flow
-        );
+        flow = flowRepository.create(GenericFlow.of(flow));
 
         try {
             Optional<Flow> found = flowRepository.findById(null, flow.getNamespace(), flow.getId());
 
-            assertThat(found.isPresent(), is(true));
-            assertThat(found.get() instanceof FlowWithException, is(true));
-            assertThat(((FlowWithException) found.get()).getException(), containsString("Templates are disabled"));
+            assertThat(found.isPresent()).isEqualTo(true);
+            assertThat(found.get() instanceof FlowWithException).isEqualTo(true);
+            assertThat(((FlowWithException) found.get()).getException()).contains("Templates are disabled");
         } finally {
             deleteFlow(flow);
         }
     }
 
     @Test
-    protected void lastRevision() {
-        String namespace = "io.kestra.unittest";
-        String flowId = IdUtils.create();
-        String tenantId = "tenant";
+    protected void shouldReturnNullRevisionForNonExistingFlow() {
+        assertThat(flowRepository.lastRevision(TEST_TENANT_ID, TEST_NAMESPACE, IdUtils.create())).isNull();
+    }
 
-        assertThat(flowRepository.lastRevision(tenantId, namespace, flowId), nullValue());
-
-        // create with builder
-        Flow first = Flow.builder()
-            .tenantId(tenantId)
-            .id(flowId)
-            .namespace(namespace)
-            .tasks(Collections.singletonList(Return.builder().id("test").type(Return.class.getName()).format(Property.of("test")).build()))
-            .inputs(ImmutableList.of(StringInput.builder().type(Type.STRING).id("a").build()))
-            .build();
-        // create with repository
-        first = flowRepository.create(first, first.generateSource(), pluginDefaultService.injectDefaults(first.withSource(first.generateSource())));
+    @Test
+    protected void shouldReturnLastRevisionOnCreate() {
+        // Given
+        final List<Flow> toDelete = new ArrayList<>();
+        final String flowId = IdUtils.create();
         try {
-            assertThat(flowRepository.lastRevision(tenantId, namespace, flowId), is(1));
+            // When
+            toDelete.add(flowRepository.create(createTestingLogFlow(flowId, "???")));
+            Integer result = flowRepository.lastRevision(TEST_TENANT_ID, TEST_NAMESPACE, flowId);
 
-            // submit new one with change
-
-            Flow flowRev2 = first.toBuilder()
-                .tasks(Collections.singletonList(
-                    Log.builder()
-                        .id(IdUtils.create())
-                        .type(Log.class.getName())
-                        .message("Hello World")
-                        .build()
-                ))
-                .inputs(ImmutableList.of(StringInput.builder().type(Type.STRING).id("b").build()))
-                .build();
-
-            first = flowRepository.update(flowRev2, first, flowRev2.generateSource(), pluginDefaultService.injectDefaults(flowRev2.withSource(flowRev2.generateSource())));
-            assertThat(flowRepository.lastRevision(tenantId, namespace, flowId), is(2));
+            // Then
+            assertThat(result).isEqualTo(1);
+            assertThat(flowRepository.lastRevision(TEST_TENANT_ID, TEST_NAMESPACE, flowId)).isEqualTo(1);
         } finally {
-            deleteFlow(first);
+            toDelete.forEach(this::deleteFlow);
         }
+    }
+
+    @Test
+    protected void shouldIncrementRevisionOnDelete() {
+        // Given
+        final String flowId = IdUtils.create();
+        FlowWithSource created = flowRepository.create(createTestingLogFlow(flowId, "first"));
+        assertThat(flowRepository.findRevisions(TEST_TENANT_ID, TEST_NAMESPACE, flowId).size()).isEqualTo(1);
+
+        // When
+        flowRepository.delete(created);
+
+        // Then
+        assertThat(flowRepository.findRevisions(TEST_TENANT_ID, TEST_NAMESPACE, flowId).size()).isEqualTo(2);
+    }
+
+    @Test
+    protected void shouldIncrementRevisionOnCreateAfterDelete() {
+        // Given
+        final List<Flow> toDelete = new ArrayList<>();
+        final String flowId = IdUtils.create();
+        try {
+            // Given
+            flowRepository.delete(
+                flowRepository.create(createTestingLogFlow(flowId, "first"))
+            );
+
+            // When
+            toDelete.add(flowRepository.create(createTestingLogFlow(flowId, "second")));
+
+            // Then
+            assertThat(flowRepository.findRevisions(TEST_TENANT_ID, TEST_NAMESPACE, flowId).size()).isEqualTo(3);
+            assertThat(flowRepository.lastRevision(TEST_TENANT_ID, TEST_NAMESPACE, flowId)).isEqualTo(3);
+        } finally {
+            toDelete.forEach(this::deleteFlow);
+        }
+    }
+
+    @Test
+    protected void shouldReturnNullForLastRevisionAfterDelete() {
+        // Given
+        final List<Flow> toDelete = new ArrayList<>();
+        final String flowId = IdUtils.create();
+        try {
+            // Given
+            FlowWithSource created = flowRepository.create(createTestingLogFlow(flowId, "first"));
+            toDelete.add(created);
+
+            FlowWithSource updated = flowRepository.update(createTestingLogFlow(flowId, "second"), created);
+            toDelete.add(updated);
+
+            // When
+            flowRepository.delete(updated);
+
+            // Then
+            assertThat(flowRepository.findById(TEST_TENANT_ID, TEST_NAMESPACE, flowId, Optional.empty())).isEqualTo(Optional.empty());
+            assertThat(flowRepository.lastRevision(TEST_TENANT_ID, TEST_NAMESPACE, flowId)).isNull();
+        } finally {
+            toDelete.forEach(this::deleteFlow);
+        }
+    }
+
+    @Test
+    protected void shouldFindAllRevisionsAfterDelete() {
+        // Given
+        final List<Flow> toDelete = new ArrayList<>();
+        final String flowId = IdUtils.create();
+        try {
+            // Given
+            FlowWithSource created = flowRepository.create(createTestingLogFlow(flowId, "first"));
+            toDelete.add(created);
+
+            FlowWithSource updated = flowRepository.update(createTestingLogFlow(flowId, "second"), created);
+            toDelete.add(updated);
+
+            // When
+            flowRepository.delete(updated);
+
+            // Then
+            assertThat(flowRepository.findById(TEST_TENANT_ID, TEST_NAMESPACE, flowId, Optional.empty())).isEqualTo(Optional.empty());
+            assertThat(flowRepository.findRevisions(TEST_TENANT_ID, TEST_NAMESPACE, flowId).size()).isEqualTo(3);
+        } finally {
+            toDelete.forEach(this::deleteFlow);
+        }
+    }
+
+    @Test
+    protected void shouldIncrementRevisionOnUpdateGivenNotEqualSource() {
+        final List<Flow> toDelete = new ArrayList<>();
+        final String flowId = IdUtils.create();
+        try {
+
+            // Given
+            FlowWithSource created = flowRepository.create(createTestingLogFlow(flowId, "first"));
+            toDelete.add(created);
+
+            // When
+            FlowWithSource updated = flowRepository.update(createTestingLogFlow(flowId, "second"), created);
+            toDelete.add(updated);
+
+            // Then
+            assertThat(updated.getRevision()).isEqualTo(2);
+            assertThat(flowRepository.lastRevision(TEST_TENANT_ID, TEST_NAMESPACE, flowId)).isEqualTo(2);
+
+        } finally {
+            toDelete.forEach(this::deleteFlow);
+        }
+    }
+
+    @Test
+    protected void shouldNotIncrementRevisionOnUpdateGivenEqualSource() {
+        final List<Flow> toDelete = new ArrayList<>();
+        final String flowId = IdUtils.create();
+        try {
+
+            // Given
+            FlowWithSource created = flowRepository.create(createTestingLogFlow(flowId, "first"));
+            toDelete.add(created);
+
+            // When
+            FlowWithSource updated = flowRepository.update(createTestingLogFlow(flowId, "first"), created);
+            toDelete.add(updated);
+
+            // Then
+            assertThat(updated.getRevision()).isEqualTo(1);
+            assertThat(flowRepository.lastRevision(TEST_TENANT_ID, TEST_NAMESPACE, flowId)).isEqualTo(1);
+
+        } finally {
+            toDelete.forEach(this::deleteFlow);
+        }
+    }
+
+    @Test
+    void shouldReturnForFindGivenQueryWildcard() {
+        ArrayListTotal<Flow> flows = flowRepository.find(Pageable.from(1, 10), "*", null, null, null, Map.of());
+        assertThat(flows.size()).isEqualTo(10);
+        assertThat(flows.getTotal()).isEqualTo(Helpers.FLOWS_COUNT);
+    }
+
+    @Test
+    void shouldReturnForGivenQueryWildCardFilters() {
+        List<QueryFilter> filters = List.of(
+           QueryFilter.builder().field(QueryFilter.Field.QUERY).operation(QueryFilter.Op.EQUALS).value("*").build()
+        );
+        ArrayListTotal<Flow> flows = flowRepository.find(Pageable.from(1, 10), null, filters);
+        assertThat(flows.size()).isEqualTo(10);
+        assertThat(flows.getTotal()).isEqualTo(Helpers.FLOWS_COUNT);
     }
 
     @Test
@@ -568,7 +603,7 @@ public abstract class AbstractFlowRepositoryTest {
         Flow flow = builder()
             .revision(1)
             .build();
-        flowRepository.create(flow, flow.generateSource(), pluginDefaultService.injectDefaults(flow));
+        flowRepository.create(GenericFlow.of(flow));
         Execution execution = Execution.builder()
             .id(IdUtils.create())
             .namespace(flow.getNamespace())
@@ -580,14 +615,14 @@ public abstract class AbstractFlowRepositoryTest {
 
         try {
             Flow full = flowRepository.findByExecution(execution);
-            assertThat(full, notNullValue());
-            assertThat(full.getNamespace(), is(flow.getNamespace()));
-            assertThat(full.getId(), is(flow.getId()));
+            assertThat(full).isNotNull();
+            assertThat(full.getNamespace()).isEqualTo(flow.getNamespace());
+            assertThat(full.getId()).isEqualTo(flow.getId());
 
             full = flowRepository.findByExecutionWithoutAcl(execution);
-            assertThat(full, notNullValue());
-            assertThat(full.getNamespace(), is(flow.getNamespace()));
-            assertThat(full.getId(), is(flow.getId()));
+            assertThat(full).isNotNull();
+            assertThat(full.getNamespace()).isEqualTo(flow.getNamespace());
+            assertThat(full.getId()).isEqualTo(flow.getId());
         } finally {
             deleteFlow(flow);
             executionRepository.delete(execution);
@@ -599,7 +634,7 @@ public abstract class AbstractFlowRepositoryTest {
         Flow flow = builder()
             .revision(3)
             .build();
-        flowRepository.create(flow, flow.generateSource(), pluginDefaultService.injectDefaults(flow));
+        flowRepository.create(GenericFlow.of(flow));
         Execution execution = Execution.builder()
             .id(IdUtils.create())
             .namespace(flow.getNamespace())
@@ -610,14 +645,14 @@ public abstract class AbstractFlowRepositoryTest {
 
         try {
             Flow full = flowRepository.findByExecution(execution);
-            assertThat(full, notNullValue());
-            assertThat(full.getNamespace(), is(flow.getNamespace()));
-            assertThat(full.getId(), is(flow.getId()));
+            assertThat(full).isNotNull();
+            assertThat(full.getNamespace()).isEqualTo(flow.getNamespace());
+            assertThat(full.getId()).isEqualTo(flow.getId());
 
             full = flowRepository.findByExecutionWithoutAcl(execution);
-            assertThat(full, notNullValue());
-            assertThat(full.getNamespace(), is(flow.getNamespace()));
-            assertThat(full.getId(), is(flow.getId()));
+            assertThat(full).isNotNull();
+            assertThat(full.getNamespace()).isEqualTo(flow.getNamespace());
+            assertThat(full.getId()).isEqualTo(flow.getId());
         } finally {
             deleteFlow(flow);
             executionRepository.delete(execution);
@@ -629,8 +664,8 @@ public abstract class AbstractFlowRepositoryTest {
         FlowWithSource toDelete = null;
         try {
             // Given
-            Flow flow = createTestFlowForNamespace("io.kestra.unittest");
-            toDelete = flowRepository.create(flow, "", flow);
+            Flow flow = createTestFlowForNamespace(TEST_NAMESPACE);
+            toDelete = flowRepository.create(GenericFlow.of(flow));
             // When
             int count = flowRepository.count(null);
 
@@ -647,15 +682,15 @@ public abstract class AbstractFlowRepositoryTest {
     void shouldCountForNullTenantGivenNamespace() {
         List<FlowWithSource> toDelete = new ArrayList<>();
         try {
-            toDelete.add(flowRepository.create(createTestFlowForNamespace("io.kestra.unittest.sub"), "", createTestFlowForNamespace("io.kestra.unittest.sub")));
-            toDelete.add(flowRepository.create(createTestFlowForNamespace("io.kestra.unittest.shouldcountbynamespacefornulltenant"), "", createTestFlowForNamespace("io.kestra.unittest.shouldcountbynamespacefornulltenant")));
-            toDelete.add(flowRepository.create(createTestFlowForNamespace("com.kestra.unittest"), "", createTestFlowForNamespace("com.kestra.unittest")));
+            toDelete.add(flowRepository.create(GenericFlow.of(createTestFlowForNamespace("io.kestra.unittest.sub"))));
+            toDelete.add(flowRepository.create(GenericFlow.of(createTestFlowForNamespace("io.kestra.unittest.shouldcountbynamespacefornulltenant"))));
+            toDelete.add(flowRepository.create(GenericFlow.of(createTestFlowForNamespace("com.kestra.unittest"))));
 
             int count = flowRepository.countForNamespace(null, "io.kestra.unittest.shouldcountbynamespacefornulltenant");
-            assertThat(count, is(1));
+            assertThat(count).isEqualTo(1);
 
-            count = flowRepository.countForNamespace(null, "io.kestra.unittest");
-            assertThat(count, is(2));
+            count = flowRepository.countForNamespace(null, TEST_NAMESPACE);
+            assertThat(count).isEqualTo(2);
         } finally {
             for (FlowWithSource flow : toDelete) {
                 flowRepository.delete(flow);
@@ -676,8 +711,12 @@ public abstract class AbstractFlowRepositoryTest {
     }
 
     private void deleteFlow(Flow flow) {
-        Integer revision = flowRepository.lastRevision(flow.getTenantId(), flow.getNamespace(), flow.getId());
-        flowRepository.delete(flow.toBuilder().revision(revision).build().withSource(flow.generateSource()));
+        if (flow == null) {
+            return;
+        }
+        flowRepository
+            .findByIdWithSource(flow.getTenantId(), flow.getNamespace(), flow.getId())
+            .ifPresent(delete -> flowRepository.delete(flow.toBuilder().revision(null).build()));
     }
 
     @Singleton
@@ -694,4 +733,17 @@ public abstract class AbstractFlowRepositoryTest {
             emits = new ArrayList<>();
         }
     }
+
+    private static GenericFlow createTestingLogFlow(String id, String logMessage) {
+        String source = """
+               id: %s
+               namespace: %s
+               tasks:
+                 - id: log
+                   type: io.kestra.plugin.core.log.Log
+                   message: %s
+            """.formatted(id, TEST_NAMESPACE, logMessage);
+        return GenericFlow.fromYaml(TEST_TENANT_ID, source);
+    }
+
 }
